data y boreholes notebooks bonitos

--- a/boreholes_3D_map.ipynb
+++ b/boreholes_3D_map.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74d437eb",
    "metadata": {},
    "source": [
     "# The figure 3D_Boreholes_LRD.html"
@@ -10,8 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7db6d688",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATADIR='data/' # Directory with the data\n",
+    "FIGURESDIR='figures/' # Figures produced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +29,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b28a32",
    "metadata": {},
    "source": [
     "We read the borehole data classified by granulometry."
@@ -29,48 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "814795c0",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clays=pd.read_csv('clays.csv')\n",
-    "sands=pd.read_csv('sands.csv')\n",
-    "gravels=pd.read_csv('gravels.csv')\n",
-    "basament=pd.read_csv('basament.csv')"
+    "clays=pd.read_csv(DATADIR+'clays.csv')\n",
+    "sands=pd.read_csv(DATADIR+'sands.csv')\n",
+    "gravels=pd.read_csv(DATADIR+'gravels.csv')\n",
+    "basament=pd.read_csv(DATADIR+'basament.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef9242bf",
    "metadata": {},
    "source": [
-    "We have used Google Earth to draw the delta contour and have created the file 'deltacontourn.csv' with the corresponding data. We read this file."
+    "We have used Google Earth to draw the delta contour and we have created the file 'deltacontourn.csv' with the corresponding data. We read this file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5283c8ae",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "deltacontourn=pd.read_csv('deltacontourn.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83f02a22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deltacontourn"
+    "deltacontourn=pd.read_csv(DATADIR+'deltacontourn.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9cdb68f6",
    "metadata": {},
    "source": [
     "The function coordinates(data, positions) lists the UTM_X, UTM_Y and Z coordinates extracted from 'data' by looking at the data indicated at 'positions'."
@@ -78,21 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e6add115",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzcontourn=coordinates('deltacontourn.csv',[0,1,2])\n",
-    "xyzclays=coordinates('clays.csv',[1,2,3])\n",
-    "xyzsands=coordinates('sands.csv',[1,2,3])\n",
-    "xyzgravels=coordinates('gravels.csv',[1,2,3])\n",
-    "xyzbasament=coordinates('basament.csv',[1,2,3])"
+    "xyzcontourn=coordinates(DATADIR+'deltacontourn.csv',[0,1,2])\n",
+    "xyzclays=coordinates(DATADIR+'clays.csv',[1,2,3])\n",
+    "xyzsands=coordinates(DATADIR+'sands.csv',[1,2,3])\n",
+    "xyzgravels=coordinates(DATADIR+'gravels.csv',[1,2,3])\n",
+    "xyzbasament=coordinates(DATADIR+'basament.csv',[1,2,3])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a5e377f",
    "metadata": {},
    "source": [
     "The function bounds(list) returns some bounds of 'list', where 'list' is a list obtained using the above function 'coordinates'. These bounds are used to delimit the bounds of the figure we are going to create."
@@ -100,8 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20753a8b",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +100,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee362bd",
    "metadata": {},
    "source": [
     "We use the 'Polygon' function to create a 2D polygon with the X and Y coordinates of the delta contour."
@@ -118,8 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0357d492",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "344857b1",
    "metadata": {},
    "source": [
     "The near(xyz,polyg,dis) function uses the geometry function 'distance' to select coordinates in the 'xyz' list that are within a distance less than 'dis' from the polygon 'polyg'."
@@ -136,8 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d241dbe1",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +135,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0fe244",
    "metadata": {},
    "source": [
     "The 'data_p(list,names,colors,symbols,size)' function applies the plotly.graph_objects 'Scatter3d' function to 'list', which is a list of lists of xyz coordinates, to create the data 3D figure environment. In the variable 'names' we indicate the names in the legend, in the variable 'colors' we indicate the colors of the markers, in the variable 'symbols' we indicate the symbols used as markers and in the variable 'siz' we indicate the size of the markers."
@@ -157,8 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9f26447",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +154,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "094c0c33",
    "metadata": {},
    "source": [
     "We also want to add a mark at the position of each borehole at cota 7."
@@ -178,28 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3320ffc3",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzdat=coordinates('boreholes.csv',[1,2,3])\n",
+    "xyzdat=coordinates(DATADIR+'boreholes.csv',[1,2,3])\n",
     "xyzdat_near=nearby(xyzdat,contourn_poly,300)\n",
     "marks_dat=data_p([xyzdat_near],['marks for all boreholes'],['black'],['circle'],3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e602238b",
    "metadata": {},
    "source": [
-    "Now we built the figure and create the HTML file"
+    "Now we built the figure and create the HTML file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a6e9a2a5",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,10 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ae6a3e9",
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'figures/3D_Boreholes_LRD.html'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fig=go.Figure(data=dat)\n",
     "fig.add_trace(go.Scatter3d(x=xyzcontourn[0],y=xyzcontourn[1],z=xyzcontourn[2], mode=\"lines\",\n",
@@ -232,23 +222,13 @@
     "                 )\n",
     "\n",
     "#fig.show()\n",
-    "go_offline.plot(fig,filename='3D_Boreholes_LRD.html',validate=True, auto_open=False)\n",
-    "\n",
-    "\n"
+    "go_offline.plot(fig,filename=FIGURESDIR+'3D_Boreholes_LRD.html',validate=True, auto_open=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccb2f9a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
