--- a/3D lithosomes.ipynb
+++ b/3D lithosomes.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4dd0a90",
    "metadata": {},
    "source": [
     "# 3D lithosomes"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "108bd996",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Las cuatro primeras lineas son para introducir el módulo funciones y los datos del contorno, incluyendo los bounds que nos servirán para establecer los límites de nuestra figura y el polinómio del contorno que utilizamos para quedarnos con los datos que nos interesan. Estas líneas ya están explicadas en los otros notebook."
+    "DATADIR='data/' # Directory with the data\n",
+    "FIGURESDIR='figures/' # Figures produced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "acda7ac6",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,29 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8bcf7a88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deltacontourn=pd.read_csv('deltacontourn.csv')\n",
-    "xyzcontourn=coordinates('deltacontourn.csv',[0,1,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "76887321",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bounds=bounds(xyzcontourn)"
+    "deltacontourn=pd.read_csv(DATADIR+'deltacontourn.csv')\n",
+    "xyzcontourn=coordinates(DATADIR+'deltacontourn.csv',[0,1,2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "78cf479e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bound=bounds(xyzcontourn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,80 +57,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4df5b39",
    "metadata": {},
    "source": [
-    "We read the data, classified by stratigraphic intervals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ca281e27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "up_sands=pd.read_csv('up_sands.csv')\n",
-    "mid_sands=pd.read_csv('mid_sands.csv')\n",
-    "low_sands=pd.read_csv('low_sands.csv')"
+    "We read the data, classified by stratigraphic intervals."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13466e49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "up_gravels=pd.read_csv('up_gravels.csv')\n",
-    "mid_gravels=pd.read_csv('mid_gravels.csv')\n",
-    "low_gravels=pd.read_csv('low_gravels.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a338ec2c",
-   "metadata": {},
-   "source": [
-    "Now we apply the function 'coordinates' to extract the coordinates from the data"
+    "up_sands=pd.read_csv(DATADIR+'up_sands.csv')\n",
+    "mid_sands=pd.read_csv(DATADIR+'mid_sands.csv')\n",
+    "low_sands=pd.read_csv(DATADIR+'low_sands.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3106d3e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzup_sands=coordinates('up_sands.csv',[1,2,3])\n",
-    "xyzmid_sands=coordinates('mid_sands.csv',[1,2,3])\n",
-    "xyzlow_sands=coordinates('low_sands.csv',[1,2,3])"
+    "up_gravels=pd.read_csv(DATADIR+'up_gravels.csv')\n",
+    "mid_gravels=pd.read_csv(DATADIR+'mid_gravels.csv')\n",
+    "low_gravels=pd.read_csv(DATADIR+'low_gravels.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we apply the function 'coordinates' to extract the coordinates from the data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "391e4fcd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzup_gravels=coordinates('up_gravels.csv',[1,2,3])\n",
-    "xyzmid_gravels=coordinates('mid_gravels.csv',[1,2,3])\n",
-    "xyzlow_gravels=coordinates('low_gravels.csv',[1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "777e262b",
-   "metadata": {},
-   "source": [
-    "And now the function 'nearby' to reduce de coordinates to those inside the delta contourn"
+    "xyzup_sands=coordinates(DATADIR+'up_sands.csv',[1,2,3])\n",
+    "xyzmid_sands=coordinates(DATADIR+'mid_sands.csv',[1,2,3])\n",
+    "xyzlow_sands=coordinates(DATADIR+'low_sands.csv',[1,2,3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "16845665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyzup_gravels=coordinates(DATADIR+'up_gravels.csv',[1,2,3])\n",
+    "xyzmid_gravels=coordinates(DATADIR+'mid_gravels.csv',[1,2,3])\n",
+    "xyzlow_gravels=coordinates(DATADIR+'low_gravels.csv',[1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function `nearby` reduces de coordinates to those inside the delta contour."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4ba93fca",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebed2040",
    "metadata": {},
    "source": [
     "The function 'zipxyz' will return an iterator that generates tuples of length 3. It is just as the python zip function but addapted to our context."
@@ -164,8 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c517b0a0",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "70ec468d",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,16 +173,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a314ec0d",
    "metadata": {},
    "source": [
-    "Mirando a la figura 3D_boreholes_LRD.html observamos varios agrupamientos de materiales, los cuales darán lugar a los litosomas. Queremos definir nubes de puntos con estos agrupamientos, que nos permitirán definir los litosomas. Para ello comenzamos plantando un punto en cada uno de estos agrupamientos, en cada nivel y para cada tipo de material. Metemos estos puntos en las listas p_up, p_mid and p_low para arenas y q_up, q_mid and q_low para gravas."
+    "Looking at the figure 3D_boreholes_LRD.html we observe several clusters of material, which will form the lithosomes. In order to define those clusters of points, we start by selecting a point in each one of them. We classify the start points by granulometry (sands and gravels) and height (up, mid, low)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5c024f46",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,8 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c36f8236",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,20 +202,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a637a1",
    "metadata": {},
    "source": [
-    "La función 'grouping' aplica un proceso nuclear para agrupar los puntos de una lista alrededor de un punto dado, es una función definida recursivamente que no es muy eficiente desde el punto de vista computacional, pero que tiene la ventaja de que su definición es muy simple y además hace el trabajo que queremos. \n",
+    "The function `grouping` applies a recursive cluser procedure to group the points around a given start point. It is quite inefficient, but its definition is very simple and it gets the job done.\n",
     "\n",
-    "Debido a que hay espacios en que los pozos están muy separados, hemos utilizado criterios geológicos para inferir que materiales pueden encontrarse en lugares localizados en estos espacios en los que no hay datos. Para suplir esta falta de datos, hemos definido unas nuevas listas de puntos que llamamos pp y qq (para arenas y gravas respectivamente) en las que inferimos mediante criterios geológicos que hay arenas (en los pp) y gravas (en los qq). Añadimos estas listas de puntos a los datos reales de gravas y arenas respectivamente. Esto nos permitira que  mediante la función 'grouping' podamos obtener agrupamientos que concuerden con los resultados esperados.\n",
-    "\n",
-    "Comenzamos definiendo estas listas de puntos"
+    "Due to the separation between the boreholes, we have manually inferred the type of material in the spaces far from boreholes. We add to the original data two lists with this artificial data: pp (for sands) and qq (for gravels). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3d0e4456",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0ec7a849",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,17 +268,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "da97331c",
-   "metadata": {},
-   "source": [
-    "Y ahora las añadimos a las listas de puntos correspondientes a los pozos"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b8beac99",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,8 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "708e554d",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,16 +291,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75c9e61",
    "metadata": {},
    "source": [
-    "Estamos ahora en disposición de utilizar nuestra técnica de nucleación para obtener las nubes de puntos. Para ello aplicampos la función 'grouping' que hace el trabajo. Lo hacemos primero para arenas"
+    "Now the function `grouping` will work as expected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "968693c2",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,8 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "34a8df4a",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,8 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "dc6d654c",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,8 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b6df7b07",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,8 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "75ef0a4f",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,8 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "8e7063c1",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,17 +357,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8a9a7d21",
-   "metadata": {},
-   "source": [
-    "Y a continuación para gravas"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b236f712",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,8 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d69deae0",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,8 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "a34918c0",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,8 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0b545926",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,8 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e998616e",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,8 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e9e17cb6",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,16 +421,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54f8ab9",
    "metadata": {},
    "source": [
-    "Once the granulometry data of a lithosome were grouped by using the above nucleation strategy, the elements forming the previously defined groups of each lithosome were computed. For this, the Convex Hull algorithm developed by the SciPy community (https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.ConvexHull.html) was implemented. The 3D Convex Hull of a georeferenced dataset is the smallest polyhedron that wraps up all them. We calculate the Convex Hull of each list of points we have obtained."
+    "Once the granulometry data of a lithosome is grouped using the above nucleation strategy, the elements forming the previously defined groups of each lithosome were computed. For this, the Convex Hull algorithm developed by the SciPy community (https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.ConvexHull.html) was employed. The 3D Convex Hull of a georeferenced dataset is the smallest polyhedron that wraps up all them. We calculate the Convex Hull of each one of the list of points we have obtained."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "147df40b",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,8 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "a4ac4240",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,16 +450,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a893aa",
    "metadata": {},
    "source": [
-    "La función 'data_lit' que hemos definido, usa la función Mesh3d de plotly.graph_objects para crear los datos necesarios para representar los Convex Hull obtenidos. Usamos esta función en nuestro contexto "
+    "The function `data_lit` we defined makes use of othe function `Mesh3d` by `plotly.graph_objects` to shape the data in a format easy to draw."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "ced6cf83",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,8 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "d8f9a1ee",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,8 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "a4af6798",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,8 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "4405a1fb",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,16 +503,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "980d3c60",
    "metadata": {},
    "source": [
-    "Queremos utilizar Delaunay triangulation para perfilar los litosomas obtenidos, hemos definido una función 'data_tri' que utiliza la función Scatter3d para crear los datos necesarios que nos permiten representar las triangulaciones de Delaunay asociadas a los Convex Hull obtenidos."
+    "Finaly, we use the function `data_tri` to outline the convex lithosomes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "a9d516f2",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,14 +520,12 @@
     "\n",
     "trisands_up_names=['trsd_up'+str(i) for i in range(len(sands_up_hull))]\n",
     "trisands_mid_names=['trsd_mid'+str(i) for i in range(len(sands_mid_hull))]\n",
-    "trisands_low_names=['trsd_low'+str(i) for i in range(len(sands_low_hull))]\n",
-    "\n"
+    "trisands_low_names=['trsd_low'+str(i) for i in range(len(sands_low_hull))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ddc453ee",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,8 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "c957178c",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,16 +549,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c4ea2e9",
    "metadata": {},
    "source": [
-    "Now we can define the Figure 3D_Lithosomes_LRD.html"
+    "We can now define the Figure 3D_Lithosomes_LRD.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "64e5a717",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,17 +565,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "36ea2a25",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'3D_Lithosomes_LRD.html'"
+       "'figures/3D_Lithosomes_LRD.html'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,27 +593,19 @@
     "\n",
     "fig.update_layout( title=\"3D lithosomes Llobregat Delta, Z scale is x 50\",\n",
     "    scene=dict(aspectratio=dict(x=2, y=2, z=0.5),\n",
-    "              xaxis = dict(range=[bounds[0]-2000,bounds[1]+2000],),\n",
-    "                             yaxis = dict(range=[bounds[2]-2000,bounds[3]+2000])\n",
+    "              xaxis = dict(range=[bound[0]-2000,bound[1]+2000],),\n",
+    "                             yaxis = dict(range=[bound[2]-2000,bound[3]+2000])\n",
     "                            )\n",
     "                 )\n",
     "\n",
     "#fig.show()\n",
-    "go_offline.plot(fig,filename='3D_Lithosomes_LRD.html',validate=True, auto_open=False)"
+    "go_offline.plot(fig,filename=FIGURESDIR+'3D_Lithosomes_LRD.html',validate=True, auto_open=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01ac329f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -697,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
