--- a/boreholes_3D_map.ipynb
+++ b/boreholes_3D_map.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also want to add a mark at the position of each borehole at cota 7."
+    "We also want to add a mark at the position of each borehole at height 7."
    ]
   },
   {
