--- a/3D_Basement_LRD.ipynb
+++ b/3D_Basement_LRD.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b6192fde",
    "metadata": {},
    "source": [
     "# 3D Basament LRD"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f3d7acff",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Las primeras lineas son para introducir el módulo funciones y los datos del contorno, incluyendo los bounds que nos servirán para establecer los límites de nuestra figura y el polinómio del contorno que utilizamos para quedarnos con los datos que nos interesan. Estas líneas ya están explicadas en los otros notebook."
+    "DATADIR='data/' # Directory with the data\n",
+    "FIGURESDIR='figures/' # Figures produced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a875d584",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import functions\n",
     "from functions import *\n",
     "\n",
-    "deltacontourn=pd.read_csv('deltacontourn.csv')\n",
-    "xyzcontourn=coordinates('deltacontourn.csv',[0,1,2])\n",
+    "deltacontourn=pd.read_csv(DATADIR+'deltacontourn.csv')\n",
+    "xyzcontourn=coordinates(DATADIR+'deltacontourn.csv',[0,1,2])\n",
     "\n",
     "contourn_bounds=bounds(xyzcontourn)\n",
     "\n",
@@ -36,52 +36,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc69a5a",
    "metadata": {},
    "source": [
-    "We read the data of those boreholes which reaches the basament."
+    "We read the data from those boreholes that reach the basament."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "29097c3e",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "basament=pd.read_csv('basament.csv')"
+    "basament=pd.read_csv(DATADIR+'basament.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2730445f",
    "metadata": {},
    "source": [
-    "And apply the function 'coordinates' to extract the coordinates from the data."
+    "Now we apply the function 'coordinates' to extract the coordinates from the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ffb53546",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzbasament=coordinates('basament.csv',[1,2,3])"
+    "xyzbasament=coordinates(DATADIR+'basament.csv',[1,2,3])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "151812fe",
    "metadata": {},
    "source": [
-    "Now we use the function 'nearby' to reduce de coordinates to those inside the delta contourn"
+    "The function `nearby` reduces de coordinates to those inside the delta contour."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4c27b182",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +84,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1bd199c",
    "metadata": {},
    "source": [
-    "We are going to adapt the bounds taking into account the bound given by the data in the basement, so first we apply the 'bounds' function to the basement and then we use a new function 'bounds_join(b1,b2)' which calculates new bounds of two lists of bounds."
+    "We are going to adapt the bounds keeping in mind the bound given by the data in the basement, so first we apply the `bounds` function to the basement and then we use a new function `bounds_join(b1,b2)` which calculates new bounds of two lists of bounds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f4bc5dc1",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -110,8 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "57ef61ee",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +111,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c3477b6",
    "metadata": {},
    "source": [
-    "We apply the interpolation function"
+    "We apply the interpolation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8990a202",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,16 +127,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3c0ecc",
    "metadata": {},
    "source": [
-    "We want to represent the basement surface only within the delta contour. We have defined a 'slice' function to slice data, such as the output of the 'interpolation' function, and take only those points in a polynomial region. We apply this function to the base_int list."
+    "We want to represent the basement surface only within the delta contour. We have defined a 'slice' function to slice data, such as the output of the 'interpolation' function, and take only those points in a polynomial region. We apply this function to the `basament_itp` list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7394a45c",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,35 +143,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6f33a7",
    "metadata": {},
    "source": [
-    "We also want to add a mark at the position of each borehole at cota 7."
+    "We also want to add a mark at the position of each borehole at height 7."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "437dc5a7",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzdat=coordinates('boreholes.csv',[1,2,3])\n",
+    "xyzdat=coordinates(DATADIR+'boreholes.csv',[1,2,3])\n",
     "xyzdat_near=nearby(xyzdat,contourn_poly,300)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "abd6d898",
    "metadata": {},
    "source": [
-    "The 'data_p' function is now used to obtain the data for points in the figure."
+    "The 'data_p' function is now used to obtain the data for the points in the figure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b88c6192",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +176,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94177175",
    "metadata": {},
    "source": [
     "To draw the basament surface we use the plotly.graph_objects fuction 'Surface'."
@@ -201,23 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "95e86699",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'3D_Basament_LRD.html'"
+       "'figures/3D_Basament_LRD.html'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fig=go.Figure(data=datos_points)\n",
+    "fig=go.Figure(data=data_points)\n",
     "fig.add_trace(go.Scatter3d(x=xyzcontourn[0],y=xyzcontourn[1],z=xyzcontourn[2], mode=\"lines\",\n",
     "                           line_width=5,\n",
     "                           name='Delta Contour',\n",
@@ -245,21 +226,13 @@
     "                 )\n",
     "\n",
     "#fig.show()\n",
-    "go_offline.plot(fig,filename='3D_Basament_LRD.html',validate=True, auto_open=False)"
+    "go_offline.plot(fig,filename=FIGURESDIR+'3D_Basament_LRD.html',validate=True, auto_open=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5c0b060",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
