--- a/3D_Basement_LRD.ipynb
+++ b/3D_Basement_LRD.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3D Basament LRD"
+    "# 3D Basement LRD"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We read the data from those boreholes that reach the basament."
+    "We read the data from those boreholes that reach the basement."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basament=pd.read_csv(DATADIR+'basament.csv')"
+    "basement=pd.read_csv(DATADIR+'basement.csv')"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzbasament=coordinates(DATADIR+'basament.csv',[1,2,3])"
+    "xyzbasement=coordinates(DATADIR+'basement.csv',[1,2,3])"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyzbasament_near=nearby(xyzbasament,contourn_poly,500)"
+    "xyzbasement_near=nearby(xyzbasement,contourn_poly,500)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "basament_bounds=bounds(xyzbasament)"
+    "basement_bounds=bounds(xyzbasement)"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_bounds=bounds_join(contourn_bounds,basament_bounds)"
+    "new_bounds=bounds_join(contourn_bounds,basement_bounds)"
    ]
   },
   {
@@ -122,14 +122,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basament_itp=interpolation(xyzbasament,100,new_bounds)"
+    "basement_itp=interpolation(xyzbasement,100,new_bounds)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to represent the basement surface only within the delta contour. We have defined a 'slice' function to slice data, such as the output of the 'interpolation' function, and take only those points in a polynomial region. We apply this function to the `basament_itp` list."
+    "We want to represent the basement surface only within the delta contour. We have defined a 'slice' function to slice data, such as the output of the 'interpolation' function, and take only those points in a polynomial region. We apply this function to the `basement_itp` list."
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cbasament_itp=cutting(basament_itp,contourn_poly,500)"
+    "cbasement_itp=cutting(basement_itp,contourn_poly,500)"
    ]
   },
   {
@@ -171,14 +171,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_points=data_p([xyzdat_near,xyzbasament_near],['boreholes location','basement points'],['darkblue','red'],['cross','circle'],2)"
+    "data_points=data_p([xyzdat_near,xyzbasement_near],['boreholes location','basement points'],['darkblue','red'],['cross','circle'],2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To draw the basament surface we use the plotly.graph_objects fuction 'Surface'."
+    "To draw the basement surface we use the plotly.graph_objects fuction 'Surface'."
    ]
   },
   {
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "'figures/3D_Basament_LRD.html'"
+       "'figures/3D_Basement_LRD.html'"
       ]
      },
      "execution_count": 12,
@@ -209,11 +209,11 @@
     "                          )\n",
     "             )\n",
     "\n",
-    "fig.add_trace(go.Surface(z=cbasament_itp[0],x=cbasament_itp[1],y=cbasament_itp[2], \n",
+    "fig.add_trace(go.Surface(z=cbasement_itp[0],x=cbasement_itp[1],y=cbasement_itp[2], \n",
     "                        opacity = 0.7,\n",
     "                        colorscale='brwnyl',\n",
-    "                        name='superficie basamento',\n",
-    "                        #label='superficie basamento',\n",
+    "                        name='superficie basemento',\n",
+    "                        #label='superficie basemento',\n",
     "                        showscale=False\n",
     "                        )             \n",
     "             )\n",
@@ -226,7 +226,7 @@
     "                 )\n",
     "\n",
     "#fig.show()\n",
-    "go_offline.plot(fig,filename=FIGURESDIR+'3D_Basament_LRD.html',validate=True, auto_open=False)"
+    "go_offline.plot(fig,filename=FIGURESDIR+'3D_Basement_LRD.html',validate=True, auto_open=False)"
    ]
   }
  ],
