--- a/data_manipulation.ipynb
+++ b/data_manipulation.ipynb
@@ -72,7 +72,7 @@
     "clays=data.loc[(data['Clase']=='arcillas y limos')]\n",
     "sands=data.loc[(data['Clase']=='arenas')]\n",
     "gravels=data.loc[(data['Clase']=='gravillas y gravas')]\n",
-    "basament=data.loc[(data['Valor']=='S')]"
+    "basement=data.loc[(data['Valor']=='S')]"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "clays.to_csv(DATADIR+'clays.csv',index=False)\n",
     "sands.to_csv(DATADIR+'sands.csv',index=False)\n",
     "gravels.to_csv(DATADIR+'gravels.csv',index=False)\n",
-    "basament.to_csv(DATADIR+'basament.csv',index=False)"
+    "basement.to_csv(DATADIR+'basement.csv',index=False)"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have defined three stratigraphic intervals, called lower (> 50 m b.s.l.) in the distal LRD sector, middle (20–50 m b.s.l.) in the central LRD, and upper (< 20 m b.s.l.) spread over the entire LRD. We select clays, sands gravels or basament at each interval and save the data in csv files."
+    "We have defined three stratigraphic intervals, called lower (> 50 m b.s.l.) in the distal LRD sector, middle (20–50 m b.s.l.) in the central LRD, and upper (< 20 m b.s.l.) spread over the entire LRD. We select clays, sands gravels or basement at each interval and save the data in csv files."
    ]
   },
   {
