Minor changes in comments

--- a/3D lithosomes.ipynb
+++ b/3D lithosomes.ipynb
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function 'zipxyz' will return an iterator that generates tuples of length 3. It is just as the python zip function but addapted to our context."
+    "The function `zipxyz` will return an iterator that generates tuples of length 3. It is just as the python `zip` function but addapted to our context."
    ]
   },
   {
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the granulometry data of a lithosome is grouped using the above nucleation strategy, the elements forming the previously defined groups of each lithosome were computed. For this, the Convex Hull algorithm developed by the SciPy community (https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.ConvexHull.html) was employed. The 3D Convex Hull of a georeferenced dataset is the smallest polyhedron that wraps up all them. We calculate the Convex Hull of each one of the list of points we have obtained."
+    "Once the granulometry data of a lithosome is grouped using the above nucleation strategy, the elements forming the previously defined groups of each lithosome were computed. For this, the Convex Hull algorithm developed by the SciPy community (https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.ConvexHull.html) was employed. The 3D Convex Hull of a georeferenced dataset is the smallest convex polyhedron that wraps up all them. We calculate the Convex Hull of each one of the list of points we have obtained."
    ]
   },
   {
