--- a/boreholes_3D_map.ipynb
+++ b/boreholes_3D_map.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have used Google Earth to draw the delta contour and we have created the file 'deltacontourn.csv' with the corresponding data. We read this file."
+    "We have used Google Earth to draw the LRD contour and we have created the file 'deltacontourn.csv' with the corresponding data. We read this file."
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function coordinates(data, positions) lists the UTM_X, UTM_Y and Z coordinates extracted from 'data' by looking at the data indicated at 'positions'."
+    "The function coordinates(data, positions) lists the X, Y and Z UTM coordinates extracted from 'data' by looking at the data indicated at 'positions'."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 'data_p(list,names,colors,symbols,size)' function applies the plotly.graph_objects 'Scatter3d' function to 'list', which is a list of lists of xyz coordinates, to create the data 3D figure environment. In the variable 'names' we indicate the names in the legend, in the variable 'colors' we indicate the colors of the markers, in the variable 'symbols' we indicate the symbols used as markers and in the variable 'siz' we indicate the size of the markers."
+    "The 'data_p(list,names,colors,symbols,size)' function applies the plotly.graph_objects 'Scatter3d' function to 'list', which is a list of lists of xyz coordinates, to create the data 3D figure environment. In the variable 'names' we indicate the names in the legend, in the variable 'colors' we indicate the colors of the markers, in the variable 'symbols' we indicate the symbols used as markers, and in the variable 'siz' we indicate the size of the markers."
    ]
   },
   {
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also want to add a mark at the position of each borehole at height 7."
+    "We also want to add a mark at the position of each borehole at elevation (in Spanish 'cota') 7."
    ]
   },
   {
