--- a/data_manipulation.ipynb
+++ b/data_manipulation.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although the original data comes in an excel file, we have used pandas to extract the data we really want from the original file and save it as a csv file that we read."
+    "We previously used Pandas to extract the original XLS file and save it as a CSV file."
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And save those data to csv files."
+    "And save those data to CSV files."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have defined three stratigraphic intervals, called lower (> 50 m b.s.l.) in the distal LRD sector, middle (20–50 m b.s.l.) in the central LRD, and upper (< 20 m b.s.l.) spread over the entire LRD. We select clays, sands gravels or basement at each interval and save the data in csv files."
+    "We have defined three stratigraphic intervals, called lower (> 50 m b.s.l.) in the distal LRD sector, middle (20–50 m b.s.l.) in the central LRD, and upper (< 20 m b.s.l.) spread over the entire LRD. We select clays, sands gravels or basement at each interval and save the data as CSV files."
    ]
   },
   {
