--- a/3D_Basement_LRD.ipynb
+++ b/3D_Basement_LRD.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also want to add a mark at the position of each borehole at height 7."
+    "We also want to add a mark at the position of each borehole at elevation 7."
    ]
   },
   {
